v2.4.20
----------------------------------------------------------------------------------------------------
 * Enabling ED25519 support and certificate transparancy information when
   building with libressl v3.5.0 and newer. Thanks to Giovanni Bechis.

v2.4.19
----------------------------------------------------------------------------------------------------
 * restored curl_easy cleanup behaviour from v2.4.14 and refactored
   the use of curl_multi for OCSP requests to work with that. Fixes #293.

v2.4.18
----------------------------------------------------------------------------------------------------
 * New directive `MDStoreLocks` that can be used on cluster setups with
   a shared file system for `MDStoreDir` to order activation of renewed
   certificates when several cluster nodes are restarted at the same time.
   Store locks are not enabled by default.

v2.4.17
----------------------------------------------------------------------------------------------------
 * A bug was fixed that caused very large MDomains with the combined DNS
   names exceeding ~7k to fail, as request bodies would contain partially
   wrong data from uninitialized memory. This would have appeared as
   failure in signing-up/renewing such configurations.
   This was reported by Ronald Crane (Zippenhop LLC).

v2.4.16
----------------------------------------------------------------------------------------------------
 * The `MDCertificateAuthority` directive can take more than one URL/name of
   an ACME CA. This gives a failover for renewals when 2 consecutive attempts
   to get a certificate failed. See REAME for details.
 * New directive `MDRetryDelay` to set the delay of retries. See README
   for details.
 * New directive `MDRetryFailover` to set the number of errored attempts
   before an alternate CA is selected for certificate renewals. See README
   for details.

v2.4.15
----------------------------------------------------------------------------------------------------