@@ -60,7 +60,7 @@ apr_status_t md_acme_order_save(struct md_store_t *store, apr_pool_t *p,
                                     md_acme_order_t *authz_set, int create);
 
 apr_status_t md_acme_order_purge(struct md_store_t *store, apr_pool_t *p, 
-                                 md_store_group_t group, const char *md_name,
+                                 md_store_group_t group, const md_t *md,
                                  apr_table_t *env);
 
 apr_status_t md_acme_order_start_challenges(md_acme_order_t *order, md_acme_t *acme,
