@@ -1,3 +1,6 @@
+ * MDChallengeDns01 can now be configured for individual domains.
+   Using PR from Jérôme Billiras (@bilhackmac) and adding test case and fixing proper working
+
 v2.4.20
 ----------------------------------------------------------------------------------------------------
  * Enabling ED25519 support and certificate transparancy information when
